# anamoly-detection-

./: .gitignore  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUMMARY.md  README.md  deploy.py  pyproject.toml  requirements.txt  streamlit_app.py  validate.py
data/water/clean/: beautiful-beach-with-amazing-blue-water-waves-landscape-photography_874919-203.avif
